--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "multicast-dns": "^7.2.5",
+    "passport": "^0.7.0",
     "path": "^0.12.7",
     "ws": "^8.17.0"
   }
